HandBoard_Rev1.cydsn/REBUILD.log
--------------- Rebuild Started: 02/27/2023 19:16:33 Project: HandBoard_Rev1, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\HandBoard_Rev1.cycdx"
Deleting file ".\HandBoard_Rev1.svd"
Deleting file ".\HandBoard_Rev1.rpt"
Deleting file ".\HandBoard_Rev1_timing.html"
cydsfit.exe -.appdatapath "C:\Users\kratz\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\Users\kratz\OneDrive\Documents\PSoC Creator\Hand_Board_PY2023\HandBoard_Rev1.cydsn\HandBoard_Rev1.cyprj" -d CY8C4248BZI-L489 -s "C:\Users\kratz\OneDrive\Documents\PSoC Creator\Hand_Board_PY2023\HandBoard_Rev1.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 14 pin(s) will be assigned a location by the fitter: \UART:rx(0)\, \UART:tx(0)\, Dip_1(0), Dip_2(0), Dip_3(0), Dip_4(0), Pin_Direction(0), Pin_Encoder_A(0), Pin_Limit_1(0), Pin_Limit_2(0), Pin_Limit_3(0), Pin_Motor(0), RX_1(0), TX_1(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM0\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:20:25: error: 'nextPWM' undeclared (first use in this function)
                 set_PWM(nextPWM, ignoreLimSw, Status_Reg_Switches_Read());
                         ^
main.c:20:25: note: each undeclared identifier is reported only once for each function it appears in
main.c:20:34: error: 'ignoreLimSw' undeclared (first use in this function)
                 set_PWM(nextPWM, ignoreLimSw, Status_Reg_Switches_Read());
                                  ^
main.c:24:29: error: 'millidegreeTarget' undeclared (first use in this function)
                 SetPosition(millidegreeTarget);   
                             ^
main.c:31:17: warning: implicit declaration of function 'NextStateFromCAN' [-Wimplicit-function-declaration]
                 NextStateFromCAN(&can_recieve, &can_send);
                 ^
main.c:31:35: error: 'can_recieve' undeclared (first use in this function)
                 NextStateFromCAN(&can_recieve, &can_send);
                                   ^
main.c:31:49: error: 'can_send' undeclared (first use in this function)
                 NextStateFromCAN(&can_recieve, &can_send);
                                                 ^
main.c: In function 'Initialize':
main.c:69:5: error: 'address' undeclared (first use in this function)
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
     address = Can_addr_Read();
     ^
main.c:87:5: warning: implicit declaration of function 'Timer_PWM_Start' [-Wimplicit-function-declaration]
     Timer_PWM_Start();
     ^
main.c:88:5: warning: implicit declaration of function 'QuadDec_Start' [-Wimplicit-function-declaration]
     QuadDec_Start();
     ^
main.c:91:25: error: 'Pin_Limit_Handler' undeclared (first use in this function)
     isr_Limit_1_StartEx(Pin_Limit_Handler);
                         ^
main.c:92:5: warning: implicit declaration of function 'isr_period_PWM_StartEx' [-Wimplicit-function-declaration]
     isr_period_PWM_StartEx(Period_Reset_Handler);
     ^
main.c:92:28: error: 'Period_Reset_Handler' undeclared (first use in this function)
     isr_period_PWM_StartEx(Period_Reset_Handler);
                            ^
main.c: In function 'Pin_Limit_Handler':
main.c:101:30: error: 'ignoreLimSw' undeclared (first use in this function)
     set_PWM(GetCurrentPWM(), ignoreLimSw, Status_Reg_Switches_Read());
                              ^
main.c:110:9: error: 'bound_set1' undeclared (first use in this function)
     if (bound_set1 && ~Pin_Limit_1_Read()) {
         ^
main.c:111:9: warning: implicit declaration of function 'QuadDec_SetCounter' [-Wimplicit-function-declaration]
         QuadDec_SetCounter(enc_lim_1);
         ^
main.c:111:28: error: 'enc_lim_1' undeclared (first use in this function)
         QuadDec_SetCounter(enc_lim_1);
                            ^
main.c:113:28: error: 'enc_lim_2' undeclared (first use in this function)
         QuadDec_SetCounter(enc_lim_2);
                            ^
main.c: In function 'Period_Reset_Handler':
main.c:118:17: warning: implicit declaration of function 'Timer_PWM_ReadStatusRegister' [-Wimplicit-function-declaration]
     int timer = Timer_PWM_ReadStatusRegister();
                 ^
main.c:119:5: error: 'invalidate' undeclared (first use in this function)
     invalidate++;
     ^
main.c:120:5: error: 'CAN_time_LED' undeclared (first use in this function)
     CAN_time_LED++;
     ^
main.c:121:5: error: 'CAN_check_delay' undeclared (first use in this function)
     CAN_check_delay ++;
     ^
main.c:122:5: error: 'ERRORTimeLED' undeclared (first use in this function)
     ERRORTimeLED++;
     ^
main.c:123:5: error: 'encoderTimeOut' undeclared (first use in this function)
     encoderTimeOut++;
     ^
main.c:126:9: warning: implicit declaration of function 'SendEncoderData' [-Wimplicit-function-declaration]
         SendEncoderData(&can_send);
         ^
main.c:126:26: error: 'can_send' undeclared (first use in this function)
         SendEncoderData(&can_send);
                          ^
main.c:118:9: warning: unused variable 'timer' [-Wunused-variable]
     int timer = Timer_PWM_ReadStatusRegister();
         ^
main.c: In function 'PrintCanPacket':
main.c:152:17: error: 'txData' undeclared (first use in this function)
         sprintf(txData, "Byte%d %x   ", i+1, receivedPacket.data[i]);
                 ^
main.c: In function 'ReadCAN':
main.c:167:9: error: 'CAN_time_LED' undeclared (first use in this function)
         CAN_time_LED = 0;
         ^
main.c:170:12: error: 'NO_NEW_CAN_PACKET' undeclared (first use in this function)
     return NO_NEW_CAN_PACKET; //Means no Packet
            ^
main.c:171:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
--------------- Rebuild Failed: 02/27/2023 19:16:48 ---------------
